version/0.9/_sources/examples/12-fluids/00-fluids_model.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\12-fluids\00-fluids_model.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_12-fluids_00-fluids_model.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_12-fluids_00-fluids_model.py:


.. _ref_fluids_model:

Explore Fluids models
------------------------------------------------------

This example demonstrates how to explore Ansys Fluent and Ansys CFX models employing
the ``MeshInfo`` and ``ResultInfo``.

.. note::
    This example requires DPF 7.0 (ansys-dpf-server-2024-1-pre0) or above.
    For more information, see :ref:`ref_compatibility`.

.. GENERATED FROM PYTHON SOURCE LINES 17-21

Exploring an Ansys Fluent model
-------------------------------
The first part of the example demonstrates how you can explore an Ansys Fluent
model. Import the result file and create a model.

.. GENERATED FROM PYTHON SOURCE LINES 21-30

.. code-block:: default


    import ansys.dpf.core as dpf
    from ansys.dpf.core import examples

    path = examples.download_fluent_axial_comp()["flprj"]
    ds = dpf.DataSources(path)
    model = dpf.Model(data_sources=ds)









.. GENERATED FROM PYTHON SOURCE LINES 31-37

Exploring the mesh
~~~~~~~~~~~~~~~~~~
Explore the mesh through the ``MeshInfo``. The ``MeshInfo`` provides metadata
information about the mesh. For fluid models, it is useful to know the cell and
face zones, as well as the topological relationships between them. First get all
the available information in the ``MeshInfo`` .

.. GENERATED FROM PYTHON SOURCE LINES 37-41

.. code-block:: default


    minfo = model.metadata.mesh_info
    print(minfo)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF MeshInfo
    ------------------------------
    with properties:
      num_cells             int
      num_nodes             int
      num_faces             int
      body_names            StringField
      body_cell_topology    PropertyField
      body_face_topology    PropertyField
      body_scoping          Scoping
      cell_zone_names       StringField
      cell_zone_scoping     Scoping
      face_zone_names       StringField
      cell_zone_elements    PropertyField
      face_zone_elements    PropertyField
      face_zone_scoping     Scoping
      zone_names            StringField
      num_elem_zone         PropertyField
      zone_scoping          Scoping
      splittable_by         StringField




.. GENERATED FROM PYTHON SOURCE LINES 42-45

Then, get the bodies and their names in the model with the "body_names" ``StringField``,
which provides a relationship between body IDs and names. In this model there are two
bodies.

.. GENERATED FROM PYTHON SOURCE LINES 45-48

.. code-block:: default


    print(minfo.get_property("body_names"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF String Field
      2 Body entities 
      Data:2 elementary data 

      Body
      IDs                   data
      ------------          ----------
      13                    fluid-rotor    
                        
      28                    fluid-stator   
                        






.. GENERATED FROM PYTHON SOURCE LINES 49-53

Each body is comprised of a set of cell zones. You can investigate the hierarchical
relationship between bodies and cell zones through the "body_cell_topology"
``PropertyField``, which provides a relationship between the body IDs and the cell zone
IDs. In this case, each body is only comprised of one cell zone.

.. GENERATED FROM PYTHON SOURCE LINES 53-56

.. code-block:: default


    print(minfo.get_property("body_cell_topology"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Property Field
      2 entities 
      Data: 1 components and 2 elementary data 

      Body
      IDs                   data
      ------------          ----------
      13                    13             
                        
      28                    28             
                        






.. GENERATED FROM PYTHON SOURCE LINES 57-62

Similarly, each body is limited by a set of face zones (generally representing
boundary conditions). You can investigate the hierarchical relationship between
bodies and face zones through the "body_face_topology" ``PropertyField``, which
provides a relationship between the body IDs and the face zone IDs. In this case,
each body is limited by several face zones.

.. GENERATED FROM PYTHON SOURCE LINES 62-65

.. code-block:: default


    print(minfo.get_property("body_face_topology"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Property Field
      2 entities 
      Data: 1 components and 24 elementary data 

      Body
      IDs                   data
      ------------          ----------
      13                    2              
                            3              
                            4              
                            ...

      28                    15             
                            16             
                            17             
                            ...







.. GENERATED FROM PYTHON SOURCE LINES 66-70

The cell and face zone IDs shown in the previous PropertyFields can be mapped
to their names through the "body_zone_names" and "face_zone_names" ``PropertyField``.
As in this model there is a 1-1 correspondence between bodies and cell zones,
they have the same names and IDs.

.. GENERATED FROM PYTHON SOURCE LINES 70-74

.. code-block:: default


    print(minfo.get_property("cell_zone_names"))
    print(minfo.get_property("face_zone_names"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF String Field
      2 zone entities 
      Data:2 elementary data 

      zone
      IDs                   data
      ------------          ----------
      13                    fluid-rotor    
                        
      28                    fluid-stator   
                        


    DPF String Field
      24 zone entities 
      Data:24 elementary data 

      zone
      IDs                   data
      ------------          ----------
      2                     default-interior:0
                        
      3                     rotor-hub      
                        
      4                     rotor-shroud   
                        
      ...






.. GENERATED FROM PYTHON SOURCE LINES 75-77

All zone names (regardless of them being cell or face zones) are exported to
the "zone_names" ``StringField`` .

.. GENERATED FROM PYTHON SOURCE LINES 77-80

.. code-block:: default


    print(minfo.get_property("zone_names"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF String Field
      26 zone entities 
      Data:26 elementary data 

      zone
      IDs                   data
      ------------          ----------
      13                    fluid-rotor    
                        
      2                     default-interior:0
                        
      3                     rotor-hub      
                        
      ...






.. GENERATED FROM PYTHON SOURCE LINES 81-83

To facilitate the extraction of results, the body, cell and face zone ``Scoping``
are extracted. They can be used to scope results.

.. GENERATED FROM PYTHON SOURCE LINES 83-88

.. code-block:: default


    print(minfo.get_property("body_scoping"))
    print(minfo.get_property("cell_zone_scoping"))
    print(minfo.get_property("face_zone_scoping"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF  Scoping: 
      with Body location and 2 entities

    DPF  Scoping: 
      with zone location and 2 entities

    DPF  Scoping: 
      with zone location and 24 entities





.. GENERATED FROM PYTHON SOURCE LINES 89-95

Exploring the results
~~~~~~~~~~~~~~~~~~~~~
Explore the available results in the model through the ResultInfo. This is a Fluent model
whose native results are exported to either the centroid of the elements (like
Enthalpy or RMS Temperature), the centroid of the faces (like the Mass Flow Rate)
or the centroid of both elements and faces (like Static Pressure).

.. GENERATED FROM PYTHON SOURCE LINES 95-99

.. code-block:: default


    rinfo = model.metadata.result_info
    print(rinfo)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Transient analysis
    Unit system: SI: m, kg, N, s, V, A, K
    Physics Type: Fluid
    Available results:
         -  enthalpy: Elemental Enthalpy  
         -  mass_flow_rate: Faces Mass Flow Rate
         -  static_pressure: ElementalAndFaces Static Pressure
         -  mean_static_pressure: Elemental Mean Static Pressure
         -  rms_static_pressure: Elemental Rms Static Pressure
         -  surface_heat_rate: Faces Surface Heat Rate
         -  density: ElementalAndFaces Density
         -  temperature: ElementalAndFaces Temperature
         -  mean_temperature: ElementalAndFaces Mean Temperature
         -  rms_temperature: Elemental Rms Temperature
         -  velocity: ElementalAndFaces Velocity
         -  mean_velocity: Elemental Mean Velocity
         -  rms_velocity: Elemental Rms Velocity
    Available qualifier labels:
         - zone: default-interior:0 (2), rotor-hub (3), rotor-shroud (4), rotor-inlet (5), rotor-interface (6), rotor-blade-1 (7), rotor-blade-2 (8), rotor-per-1-shadow (9), rotor-per-1 (10), rotor-per-2-shadow (11), rotor-per-2 (12), fluid-rotor (13), default-interior (15), stator-hub (16), stator-shroud (17), stator-interface (18), stator-outlet (19), stator-blade-1 (20), stator-blade-2 (21), stator-blade-3 (22), stator-blade-4 (23), stator-per-2 (24), stator-per-2-shadow (25), stator-per-1 (26), stator-per-1-shadow (27), fluid-stator (28)
         - phase: phase-1 (1)





.. GENERATED FROM PYTHON SOURCE LINES 100-104

Each result holds more detailed information while explored individually. Enthalpy
is a scalar magnitude exported to the centroids of the elements (cells). Thus, it is
available for the two cell zones of the model (13 and 28). In addition, the model
only has one phase, and therefore the result can only be extracted for "phase-1".

.. GENERATED FROM PYTHON SOURCE LINES 104-107

.. code-block:: default


    print(rinfo.available_results[0])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Result
    ----------
    enthalpy
    Operator name: "H_S"
    Number of components: 1
    Dimensionality: scalar
    Homogeneity: specific_energy
    Units: j/kg
    Location: Elemental
    Available qualifier labels:
      - phase: phase-1 (1)
      - zone: fluid-rotor (13), fluid-stator (28)
    Available qualifier combinations:
      {'phase': 1, 'zone': 13}
      {'phase': 1, 'zone': 28}





.. GENERATED FROM PYTHON SOURCE LINES 108-111

Static Pressure, however, is ElementalAndFaces, which means that it is exported
at both the centroids of the cells and the centroids of the faces. Therefore, it is
available for all the cell and face zones of the model.

.. GENERATED FROM PYTHON SOURCE LINES 111-115

.. code-block:: default


    print(rinfo.available_results[2])






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Result
    ----------
    static_pressure
    Operator name: "P_S"
    Number of components: 1
    Dimensionality: scalar
    Homogeneity: pressure
    Units: pa
    Location: ElementalAndFaces
    Available qualifier labels:
      - phase: phase-1 (1)
      - zone: fluid-rotor (13), fluid-stator (28), rotor-hub (3), rotor-shroud (4), rotor-inlet (5), rotor-interface (6), rotor-blade-1 (7), rotor-blade-2 (8), rotor-per-1-shadow (9), rotor-per-1 (10), rotor-per-2-shadow (11), rotor-per-2 (12), stator-hub (16), stator-shroud (17), stator-interface (18), stator-outlet (19), stator-blade-1 (20), stator-blade-2 (21), stator-blade-3 (22), stator-blade-4 (23), stator-per-2 (24), stator-per-2-shadow (25), stator-per-1 (26), stator-per-1-shadow (27)
    Available qualifier combinations:
      {'phase': 1, 'zone': 13}
      {'phase': 1, 'zone': 28}
      {'phase': 1, 'zone': 3}
      {'phase': 1, 'zone': 4}
      {'phase': 1, 'zone': 5}
      {'phase': 1, 'zone': 6}
      {'phase': 1, 'zone': 7}
      {'phase': 1, 'zone': 8}
      {'phase': 1, 'zone': 9}
      {'phase': 1, 'zone': 10}
      {'phase': 1, 'zone': 11}
      {'phase': 1, 'zone': 12}
      {'phase': 1, 'zone': 16}
      {'phase': 1, 'zone': 17}
      {'phase': 1, 'zone': 18}
      {'phase': 1, 'zone': 19}
      {'phase': 1, 'zone': 20}
      {'phase': 1, 'zone': 21}
      {'phase': 1, 'zone': 22}
      {'phase': 1, 'zone': 23}
      {'phase': 1, 'zone': 24}
      {'phase': 1, 'zone': 25}
      {'phase': 1, 'zone': 26}
      {'phase': 1, 'zone': 27}





.. GENERATED FROM PYTHON SOURCE LINES 116-120

Exploring an Ansys CFX model
----------------------------
The second part of the example demonstrates how you can explore an Ansys CFX model.
Import the result file and create a model.

.. GENERATED FROM PYTHON SOURCE LINES 120-127

.. code-block:: default


    path = examples.download_cfx_heating_coil()
    ds = dpf.DataSources()
    ds.set_result_file_path(path["cas"], "cas")
    ds.add_file_path(path["dat"], "dat")
    model = dpf.Model(data_sources=ds)








.. GENERATED FROM PYTHON SOURCE LINES 128-132

Exploring the mesh
~~~~~~~~~~~~~~~~~~
If once again we explore the MeshInfo, we can see that the same information is
readily available.

.. GENERATED FROM PYTHON SOURCE LINES 132-136

.. code-block:: default


    minfo = model.metadata.mesh_info
    print(minfo)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF MeshInfo
    ------------------------------
    with properties:
      num_nodes             int
      num_cells             int
      body_names            StringField
      body_cell_topology    PropertyField
      num_faces             int
      body_face_topology    PropertyField
      body_scoping          Scoping
      cell_zone_names       StringField
      face_zone_names       StringField
      cell_zone_scoping     Scoping
      cell_zone_elements    PropertyField
      face_zone_elements    PropertyField
      face_zone_scoping     Scoping
      zone_names            StringField
      num_elem_zone         PropertyField
      zone_scoping          Scoping
      splittable_by         StringField




.. GENERATED FROM PYTHON SOURCE LINES 137-138

In this CFX model there are also two bodies.

.. GENERATED FROM PYTHON SOURCE LINES 138-141

.. code-block:: default


    print(minfo.get_property("body_names"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF String Field
      2 Body entities 
      Data:2 elementary data 

      Body
      IDs                   data
      ------------          ----------
      5                     Default 1      
                        
      8                     heater         
                        






.. GENERATED FROM PYTHON SOURCE LINES 142-145

For this model, each body is conformed by several cell zones. In this general
situation, the body ID corresponds to the highest cell zone ID of the one that
comprises it.

.. GENERATED FROM PYTHON SOURCE LINES 145-148

.. code-block:: default


    print(minfo.get_property("body_cell_topology"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Property Field
      2 entities 
      Data: 1 components and 6 elementary data 

      Body
      IDs                   data
      ------------          ----------
      5                     3              
                            4              
                            5              
                        
      8                     6              
                            7              
                            8              
                        






.. GENERATED FROM PYTHON SOURCE LINES 149-150

You can also explore the face zone IDs in each body.

.. GENERATED FROM PYTHON SOURCE LINES 150-153

.. code-block:: default


    print(minfo.get_property("body_face_topology"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Property Field
      2 entities 
      Data: 1 components and 18 elementary data 

      Body
      IDs                   data
      ------------          ----------
      5                     18             
                            17             
                            16             
                            ...

      8                     19             
                            20             
                            21             
                            ...







.. GENERATED FROM PYTHON SOURCE LINES 154-155

The cell and face zone names are readily available.

.. GENERATED FROM PYTHON SOURCE LINES 155-159

.. code-block:: default


    print(minfo.get_property("cell_zone_names"))
    print(minfo.get_property("face_zone_names"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF String Field
      6 zone entities 
      Data:6 elementary data 

      zone
      IDs                   data
      ------------          ----------
      3                     ZN1/ES1        
                        
      4                     ZN1/ES2        
                        
      5                     ZN1/ES3        
                        
      ...


    DPF String Field
      18 zone entities 
      Data:18 elementary data 

      zone
      IDs                   data
      ------------          ----------
      18                    ZN1/FS10       
                        
      17                    ZN1/FS9        
                        
      16                    ZN1/FS8        
                        
      ...






.. GENERATED FROM PYTHON SOURCE LINES 160-164

Exploring the results
~~~~~~~~~~~~~~~~~~~~~
By exploring the ResultInfo we can see that all CFX variables are exported to
the Nodes.

.. GENERATED FROM PYTHON SOURCE LINES 164-168

.. code-block:: default


    rinfo = model.metadata.result_info
    print(rinfo)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Static analysis
    Unit system: SI: m, kg, N, s, V, A, K
    Physics Type: Fluid
    Available results:
         -  specific_heat: Nodal Specific Heat
         -  epsilon: Nodal Epsilon        
         -  enthalpy: Nodal Enthalpy      
         -  turbulent_kinetic_energy: Nodal Turbulent Kinetic Energy
         -  thermal_conductivity: Nodal Thermal Conductivity
         -  dynamic_viscosity: Nodal Dynamic Viscosity
         -  turbulent_viscosity: Nodal Turbulent Viscosity
         -  static_pressure: Nodal Static Pressure
         -  total_pressure: Nodal Total Pressure
         -  density: Nodal Density        
         -  entropy: Nodal Entropy        
         -  wall_shear_stress: Nodal Wall Shear Stress
         -  temperature: Nodal Temperature
         -  total_temperature: Nodal Total Temperature
         -  velocity: Nodal Velocity      
    Available qualifier labels:
         - zone: ZN1/FS10 (18), ZN1/FS9 (17), ZN1/FS8 (16), ZN1/FS7 (15), ZN1/FS6 (14), ZN1/FS5 (13), ZN1/FS1 (9), ZN1/FS2 (10), ZN1/FS3 (11), ZN1/FS4 (12), Default 1 (5), ZN2/FS1 (19), ZN2/FS2 (20), ZN2/FS3 (21), ZN2/FS4 (22), ZN2/FS5 (23), ZN2/FS6 (24), ZN2/FS7 (25), ZN2/FS8 (26), heater (8)
         - phase: <Mixture> (1), Water at 25 C (2), Copper (3)





.. GENERATED FROM PYTHON SOURCE LINES 169-173

However, in this model there are two distinct phases. To understand the phases
at the model, you can explore the qualifiers of the ResultInfo. Thus, results
could potentially be scoped on "zone" and "phase", with the ID and name of each
phase shown below.

.. GENERATED FROM PYTHON SOURCE LINES 173-179

.. code-block:: default


    labels = rinfo.available_qualifier_labels
    print(labels)
    phase_names = rinfo.qualifier_label_support(labels[1]).string_field_support_by_property("names")
    print(phase_names)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ['zone', 'phase']
    DPF String Field
      3  entities 
      Data:3 elementary data 

      IDs                   data
      ------------          ----------
      1                     <Mixture>      
                        
      2                     Water at 25 C  
                        
      3                     Copper         
                        






.. GENERATED FROM PYTHON SOURCE LINES 180-183

Each result holds more detailed information while explored individually. Static
Pressure is only available for phase 1 ("<Mixture>"), and several cell and face
zones.

.. GENERATED FROM PYTHON SOURCE LINES 183-186

.. code-block:: default


    print(rinfo.available_results[7])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Result
    ----------
    static_pressure
    Operator name: "P_S"
    Number of components: 1
    Dimensionality: scalar
    Homogeneity: pressure
    Units: pa
    Location: Nodal
    Available qualifier labels:
      - phase: <Mixture> (1)
      - zone: Default 1 (5), ZN1/FS1 (9), ZN1/FS2 (10), ZN1/FS3 (11), ZN1/FS4 (12), ZN1/FS5 (13), ZN1/FS6 (14), ZN1/FS7 (15), ZN1/FS8 (16), ZN1/FS9 (17), ZN1/FS10 (18)
    Available qualifier combinations:
      {'phase': 1, 'zone': 5}
      {'phase': 1, 'zone': 9}
      {'phase': 1, 'zone': 10}
      {'phase': 1, 'zone': 11}
      {'phase': 1, 'zone': 12}
      {'phase': 1, 'zone': 13}
      {'phase': 1, 'zone': 14}
      {'phase': 1, 'zone': 15}
      {'phase': 1, 'zone': 16}
      {'phase': 1, 'zone': 17}
      {'phase': 1, 'zone': 18}





.. GENERATED FROM PYTHON SOURCE LINES 187-189

Thermal conductivity, however, exists for phases 2 and 3 ("Copper" and "Water at 25 C",
respectively), and several face and cell zones.

.. GENERATED FROM PYTHON SOURCE LINES 189-191

.. code-block:: default


    print(rinfo.available_results[4])




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    DPF Result
    ----------
    thermal_conductivity
    Operator name: "KT"
    Number of components: 1
    Dimensionality: scalar
    Homogeneity: conductivity
    Units: w*m^-1*k^-1
    Location: Nodal
    Available qualifier labels:
      - phase: Water at 25 C (2), Copper (3)
      - zone: Default 1 (5), ZN1/FS1 (9), ZN1/FS2 (10), ZN1/FS3 (11), ZN1/FS4 (12), ZN1/FS5 (13), ZN1/FS6 (14), ZN1/FS7 (15), ZN1/FS8 (16), ZN1/FS9 (17), ZN1/FS10 (18), heater (8), ZN2/FS1 (19), ZN2/FS2 (20), ZN2/FS3 (21), ZN2/FS4 (22), ZN2/FS5 (23), ZN2/FS6 (24), ZN2/FS7 (25), ZN2/FS8 (26)
    Available qualifier combinations:
      {'phase': 2, 'zone': 5}
      {'phase': 2, 'zone': 9}
      {'phase': 2, 'zone': 10}
      {'phase': 2, 'zone': 11}
      {'phase': 2, 'zone': 12}
      {'phase': 2, 'zone': 13}
      {'phase': 2, 'zone': 14}
      {'phase': 2, 'zone': 15}
      {'phase': 2, 'zone': 16}
      {'phase': 2, 'zone': 17}
      {'phase': 2, 'zone': 18}
      {'phase': 3, 'zone': 8}
      {'phase': 3, 'zone': 19}
      {'phase': 3, 'zone': 20}
      {'phase': 3, 'zone': 21}
      {'phase': 3, 'zone': 22}
      {'phase': 3, 'zone': 23}
      {'phase': 3, 'zone': 24}
      {'phase': 3, 'zone': 25}
      {'phase': 3, 'zone': 26}






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  14.323 seconds)


.. _sphx_glr_download_examples_12-fluids_00-fluids_model.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 00-fluids_model.py <00-fluids_model.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 00-fluids_model.ipynb <00-fluids_model.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
